TSPCoordinator/Data/Grammars/Generated/TspDslParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from TspDsl.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace TspCoordinator.Data.Grammars.Generated {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class TspDslParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		K_NOT=1, K_AND=2, K_OR=3, K_XOR=4, K_ANDTHEN=5, K_FROM_START=6, K_UNTIL=7, 
		K_FOR=8, K_EXACTLY=9, K_TIMES=10, K_TO=11, K_WAIT=12, K_MS=13, K_SEC=14, 
		K_MIN=15, K_HR=16, K_DAY=17, K_TRUE=18, K_FALSE=19, F_LAG=20, F_AVG=21, 
		F_AVGBY=22, F_MINBY=23, F_MAXBY=24, F_AVGOF=25, F_MINOF=26, F_MAXOF=27, 
		F_INCREASING=28, F_DECREASING=29, F_DERIVATION=30, F_ABS=31, F_EACH=32, 
		F_ANY=33, F_ALIGNED=34, F_ISNULL=35, NUMBER=36, STRING=37, DOUBLEQUOTED=38, 
		IDENTIFIER=39, COMMA=40, DOT=41, LPAR=42, RPAR=43, LSQPAR=44, RSQPAR=45, 
		MINUS=46, PLUS=47, MULT=48, DIV=49, LT=50, GT=51, EQ=52, NOT_EQ=53, NOT_EQ2=54, 
		LT_EQ=55, GT_EQ=56, QUESTION=57, AMP=58, DOLLAR=59, AT=60, PERCENT=61, 
		PM=62, WS=63, LBRACE=64, RBRACE=65;
	public const int
		RULE_main_rule = 0, RULE_trilean_expr = 1, RULE_boolean_expr = 2, RULE_numerical_expr = 3, 
		RULE_expr = 4, RULE_comparison = 5, RULE_equality_operator = 6, RULE_comparison_operator = 7, 
		RULE_time_cond = 8, RULE_times_cond = 9, RULE_arithmetical_func = 10, 
		RULE_boolean_func = 11, RULE_custom_func = 12, RULE_avg_func = 13, RULE_aligned_func = 14, 
		RULE_derivation_func = 15, RULE_increasing_func = 16, RULE_decreasing_func = 17, 
		RULE_avgof_func = 18, RULE_minof_func = 19, RULE_maxof_func = 20, RULE_lag_func = 21, 
		RULE_abs_func = 22, RULE_isnull_func = 23, RULE_time_token = 24, RULE_time = 25, 
		RULE_time_interval = 26, RULE_time_range = 27, RULE_time_with_abs_tol = 28, 
		RULE_time_with_rel_tol = 29, RULE_times = 30, RULE_numeric_range = 31, 
		RULE_boolean_const = 32, RULE_number = 33, RULE_string = 34, RULE_identifier = 35;
	public static readonly string[] ruleNames = {
		"main_rule", "trilean_expr", "boolean_expr", "numerical_expr", "expr", 
		"comparison", "equality_operator", "comparison_operator", "time_cond", 
		"times_cond", "arithmetical_func", "boolean_func", "custom_func", "avg_func", 
		"aligned_func", "derivation_func", "increasing_func", "decreasing_func", 
		"avgof_func", "minof_func", "maxof_func", "lag_func", "abs_func", "isnull_func", 
		"time_token", "time", "time_interval", "time_range", "time_with_abs_tol", 
		"time_with_rel_tol", "times", "numeric_range", "boolean_const", "number", 
		"string", "identifier"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "','", "'.'", "'('", "')'", "'['", "']'", "'-'", 
		"'+'", "'*'", "'/'", "'<'", "'>'", "'='", "'<>'", "'!='", "'<='", "'>='", 
		"'?'", "'&'", "'$'", "'@'", "'%'", "'+-'", null, "'{'", "'}'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "K_NOT", "K_AND", "K_OR", "K_XOR", "K_ANDTHEN", "K_FROM_START", 
		"K_UNTIL", "K_FOR", "K_EXACTLY", "K_TIMES", "K_TO", "K_WAIT", "K_MS", 
		"K_SEC", "K_MIN", "K_HR", "K_DAY", "K_TRUE", "K_FALSE", "F_LAG", "F_AVG", 
		"F_AVGBY", "F_MINBY", "F_MAXBY", "F_AVGOF", "F_MINOF", "F_MAXOF", "F_INCREASING", 
		"F_DECREASING", "F_DERIVATION", "F_ABS", "F_EACH", "F_ANY", "F_ALIGNED", 
		"F_ISNULL", "NUMBER", "STRING", "DOUBLEQUOTED", "IDENTIFIER", "COMMA", 
		"DOT", "LPAR", "RPAR", "LSQPAR", "RSQPAR", "MINUS", "PLUS", "MULT", "DIV", 
		"LT", "GT", "EQ", "NOT_EQ", "NOT_EQ2", "LT_EQ", "GT_EQ", "QUESTION", "AMP", 
		"DOLLAR", "AT", "PERCENT", "PM", "WS", "LBRACE", "RBRACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "TspDsl.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static TspDslParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public TspDslParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public TspDslParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Main_ruleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Trilean_exprContext trilean_expr() {
			return GetRuleContext<Trilean_exprContext>(0);
		}
		public Main_ruleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_main_rule; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITspDslVisitor<TResult> typedVisitor = visitor as ITspDslVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMain_rule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Main_ruleContext main_rule() {
		Main_ruleContext _localctx = new Main_ruleContext(Context, State);
		EnterRule(_localctx, 0, RULE_main_rule);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72;
			trilean_expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Trilean_exprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Boolean_exprContext boolean_expr() {
			return GetRuleContext<Boolean_exprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode K_WAIT() { return GetToken(TspDslParser.K_WAIT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAR() { return GetToken(TspDslParser.LPAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TimeContext time() {
			return GetRuleContext<TimeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(TspDslParser.COMMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Trilean_exprContext[] trilean_expr() {
			return GetRuleContexts<Trilean_exprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Trilean_exprContext trilean_expr(int i) {
			return GetRuleContext<Trilean_exprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAR() { return GetToken(TspDslParser.RPAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode K_ANDTHEN() { return GetToken(TspDslParser.K_ANDTHEN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode K_AND() { return GetToken(TspDslParser.K_AND, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode K_OR() { return GetToken(TspDslParser.K_OR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode K_FOR() { return GetToken(TspDslParser.K_FOR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Time_intervalContext time_interval() {
			return GetRuleContext<Time_intervalContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Time_condContext time_cond() {
			return GetRuleContext<Time_condContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Times_condContext times_cond() {
			return GetRuleContext<Times_condContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode K_FROM_START() { return GetToken(TspDslParser.K_FROM_START, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode K_EXACTLY() { return GetToken(TspDslParser.K_EXACTLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode K_UNTIL() { return GetToken(TspDslParser.K_UNTIL, 0); }
		public Trilean_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_trilean_expr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITspDslVisitor<TResult> typedVisitor = visitor as ITspDslVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTrilean_expr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Trilean_exprContext trilean_expr() {
		return trilean_expr(0);
	}

	private Trilean_exprContext trilean_expr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Trilean_exprContext _localctx = new Trilean_exprContext(Context, _parentState);
		Trilean_exprContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_trilean_expr, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 87;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				{
				State = 75;
				boolean_expr(0);
				}
				break;
			case 2:
				{
				State = 76;
				Match(K_WAIT);
				State = 77;
				Match(LPAR);
				State = 78;
				time();
				State = 79;
				Match(COMMA);
				State = 80;
				trilean_expr(0);
				State = 81;
				Match(RPAR);
				}
				break;
			case 3:
				{
				State = 83;
				Match(LPAR);
				State = 84;
				trilean_expr(0);
				State = 85;
				Match(RPAR);
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 123;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 121;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
					case 1:
						{
						_localctx = new Trilean_exprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_trilean_expr);
						State = 89;
						if (!(Precpred(Context, 5))) throw new FailedPredicateException(this, "Precpred(Context, 5)");
						State = 90;
						Match(K_ANDTHEN);
						State = 91;
						trilean_expr(6);
						}
						break;
					case 2:
						{
						_localctx = new Trilean_exprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_trilean_expr);
						State = 92;
						if (!(Precpred(Context, 4))) throw new FailedPredicateException(this, "Precpred(Context, 4)");
						State = 93;
						Match(K_AND);
						State = 94;
						trilean_expr(5);
						}
						break;
					case 3:
						{
						_localctx = new Trilean_exprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_trilean_expr);
						State = 95;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 96;
						Match(K_OR);
						State = 97;
						trilean_expr(4);
						}
						break;
					case 4:
						{
						_localctx = new Trilean_exprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_trilean_expr);
						State = 98;
						if (!(Precpred(Context, 7))) throw new FailedPredicateException(this, "Precpred(Context, 7)");
						State = 99;
						Match(K_FOR);
						State = 105;
						ErrorHandler.Sync(this);
						switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
						case 1:
							{
							{
							State = 101;
							ErrorHandler.Sync(this);
							_la = TokenStream.LA(1);
							if (_la==K_EXACTLY) {
								{
								State = 100;
								Match(K_EXACTLY);
								}
							}

							State = 103;
							time();
							}
							}
							break;
						case 2:
							{
							State = 104;
							time_interval();
							}
							break;
						}
						State = 109;
						ErrorHandler.Sync(this);
						switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
						case 1:
							{
							State = 107;
							time_cond();
							}
							break;
						case 2:
							{
							State = 108;
							times_cond();
							}
							break;
						}
						State = 112;
						ErrorHandler.Sync(this);
						switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
						case 1:
							{
							State = 111;
							Match(K_FROM_START);
							}
							break;
						}
						}
						break;
					case 5:
						{
						_localctx = new Trilean_exprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_trilean_expr);
						State = 114;
						if (!(Precpred(Context, 6))) throw new FailedPredicateException(this, "Precpred(Context, 6)");
						State = 115;
						Match(K_UNTIL);
						State = 116;
						boolean_expr(0);
						State = 119;
						ErrorHandler.Sync(this);
						switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
						case 1:
							{
							State = 117;
							time_cond();
							}
							break;
						case 2:
							{
							State = 118;
							times_cond();
							}
							break;
						}
						}
						break;
					}
					} 
				}
				State = 125;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Boolean_exprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Boolean_constContext boolean_const() {
			return GetRuleContext<Boolean_constContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Boolean_funcContext boolean_func() {
			return GetRuleContext<Boolean_funcContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ComparisonContext comparison() {
			return GetRuleContext<ComparisonContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode K_NOT() { return GetToken(TspDslParser.K_NOT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Boolean_exprContext[] boolean_expr() {
			return GetRuleContexts<Boolean_exprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Boolean_exprContext boolean_expr(int i) {
			return GetRuleContext<Boolean_exprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAR() { return GetToken(TspDslParser.LPAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAR() { return GetToken(TspDslParser.RPAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode K_AND() { return GetToken(TspDslParser.K_AND, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode K_XOR() { return GetToken(TspDslParser.K_XOR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode K_OR() { return GetToken(TspDslParser.K_OR, 0); }
		public Boolean_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_boolean_expr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITspDslVisitor<TResult> typedVisitor = visitor as ITspDslVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBoolean_expr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Boolean_exprContext boolean_expr() {
		return boolean_expr(0);
	}

	private Boolean_exprContext boolean_expr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Boolean_exprContext _localctx = new Boolean_exprContext(Context, _parentState);
		Boolean_exprContext _prevctx = _localctx;
		int _startState = 4;
		EnterRecursionRule(_localctx, 4, RULE_boolean_expr, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 136;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				{
				State = 127;
				boolean_const();
				}
				break;
			case 2:
				{
				State = 128;
				boolean_func();
				}
				break;
			case 3:
				{
				State = 129;
				comparison();
				}
				break;
			case 4:
				{
				State = 130;
				Match(K_NOT);
				State = 131;
				boolean_expr(5);
				}
				break;
			case 5:
				{
				State = 132;
				Match(LPAR);
				State = 133;
				boolean_expr(0);
				State = 134;
				Match(RPAR);
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 149;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,10,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 147;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
					case 1:
						{
						_localctx = new Boolean_exprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_boolean_expr);
						State = 138;
						if (!(Precpred(Context, 4))) throw new FailedPredicateException(this, "Precpred(Context, 4)");
						State = 139;
						Match(K_AND);
						State = 140;
						boolean_expr(5);
						}
						break;
					case 2:
						{
						_localctx = new Boolean_exprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_boolean_expr);
						State = 141;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 142;
						Match(K_XOR);
						State = 143;
						boolean_expr(4);
						}
						break;
					case 3:
						{
						_localctx = new Boolean_exprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_boolean_expr);
						State = 144;
						if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
						State = 145;
						Match(K_OR);
						State = 146;
						boolean_expr(3);
						}
						break;
					}
					} 
				}
				State = 151;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,10,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Numerical_exprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NumberContext number() {
			return GetRuleContext<NumberContext>(0);
		}
		public Numerical_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_numerical_expr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITspDslVisitor<TResult> typedVisitor = visitor as ITspDslVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumerical_expr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Numerical_exprContext numerical_expr() {
		Numerical_exprContext _localctx = new Numerical_exprContext(Context, State);
		EnterRule(_localctx, 6, RULE_numerical_expr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 152;
			number();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NumberContext number() {
			return GetRuleContext<NumberContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StringContext @string() {
			return GetRuleContext<StringContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Arithmetical_funcContext arithmetical_func() {
			return GetRuleContext<Arithmetical_funcContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAR() { return GetToken(TspDslParser.LPAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAR() { return GetToken(TspDslParser.RPAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MINUS() { return GetToken(TspDslParser.MINUS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MULT() { return GetToken(TspDslParser.MULT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIV() { return GetToken(TspDslParser.DIV, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] GT() { return GetTokens(TspDslParser.GT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GT(int i) {
			return GetToken(TspDslParser.GT, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PLUS() { return GetToken(TspDslParser.PLUS, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITspDslVisitor<TResult> typedVisitor = visitor as ITspDslVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		return expr(0);
	}

	private ExprContext expr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ExprContext _localctx = new ExprContext(Context, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 8;
		EnterRecursionRule(_localctx, 8, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 166;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,12,Context) ) {
			case 1:
				{
				State = 155;
				number();
				}
				break;
			case 2:
				{
				State = 156;
				@string();
				}
				break;
			case 3:
				{
				State = 157;
				identifier();
				}
				break;
			case 4:
				{
				State = 158;
				arithmetical_func();
				}
				break;
			case 5:
				{
				State = 160;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==MINUS) {
					{
					State = 159;
					Match(MINUS);
					}
				}
